[gd_scene load_steps=6 format=3 uid="uid://csdab3usnnwcj"]

[ext_resource type="Script" path="res://Entities/Enemy/Base/enemy_base.gd" id="1_jnrfc"]
[ext_resource type="Texture2D" uid="uid://rmss06pcfjen" path="res://icon.svg" id="2_gfdlk"]
[ext_resource type="PackedScene" uid="uid://cu77iqu4ph4v5" path="res://Entities/Shared Resources/Hitbox.tscn" id="2_ltybd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vyya2"]
radius = 18.0278

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n82wc"]
size = Vector2(32, 32)

[node name="EnemyBase" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 4
script = ExtResource("1_jnrfc")

[node name="Collision (Terrain)" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_vyya2")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_gfdlk")

[node name="Hitbox" parent="." instance=ExtResource("2_ltybd")]
collision_layer = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("RectangleShape2D_n82wc")

[node name="Delete this - testing only" type="Label" parent="."]
visible = false
offset_left = -10.0
offset_top = -49.0
offset_right = 30.0
offset_bottom = -26.0
text = "ow"

[node name="Timer" type="Timer" parent="Delete this - testing only"]
wait_time = 0.5

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]

[node name="Wall Detector" type="RayCast2D" parent="."]
target_position = Vector2(31, 0)

[node name="StunTimer" type="Timer" parent="."]

[node name="PlayerAggroTimer" type="Timer" parent="."]

[node name="PlayerRaycast" type="RayCast2D" parent="."]

[connection signal="timeout" from="Delete this - testing only/Timer" to="." method="delete_this_testing_only"]
[connection signal="body_entered" from="PlayerDetection" to="." method="PlayerDetection"]
[connection signal="body_exited" from="PlayerDetection" to="." method="PlayerDetection_Leave"]
